# script_al_sesc_mxm

./: .gitignore  README.md  como_usar.txt  main.py  pyproject.toml
logs/: erros_processamento.txt  log_processamento_me202503.txt  log_processamento_od202503.txt  log_processamento_rf202503.txt
src/: config.py  main.py  main_gui.py
src/processamento/: me.py  od.py  rf.py
src/utils/: helpers.py  log.py
