[project]
name = "al-sesc-mxm"
version = "0.1.0"
description = ""
authors = [{ name = "@fmota-dev", email = "fmota.web@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "xlsxwriter (>=3.2.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ttkbootstrap (>=1.13.11,<2.0.0)",
    "customtkinter (>=5.2.2,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.1"

